# chirp-convert

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
chirp_convert/: main.py
tests/: test_chirp_convert.py  test_frequency.py  test_names.py  test_tone.py
