[tool.poetry]
name = "chirp-convert"
version = "0.1.0"
description = "Convert SARES Frequency List to Chirp CSV"
authors = ["Jeff S <jts@local>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
